--- a/src/components/profileRightBar/profileRightBar.scss
+++ b/src/components/profileRightBar/profileRightBar.scss
@@ -11,6 +11,11 @@
         .profileRightBarTitle{
             font-size: 18px;
             font-weight: 500;
+            background-color: #011631;
+            color: white;
+            border-radius: 8px;
+            padding: 10px;
+            
         }
         .editButton{
             border: none;
